update code with 2/1 edits

--- a/abc_comprehensivecba_answerstoreferees_secondround.tex
+++ b/abc_comprehensivecba_answerstoreferees_secondround.tex
@@ -53,17 +53,17 @@ University of Southern California}
 \restoregeometry
 \doublespacing
 
-\noindent We thank you all for your second round of thoughtful comments which have led to substantial improvement in the paper. Itemized responses to each of the questions posed follow.
+\noindent We thank you all for your thoughtful comments. Responding to them has led to substantial improvement in the paper. Itemized responses to each of the questions posed follow.
 
 \section*{Comments of the Editor}
 
-\noindent \textbf{Editor, Comment 1. Please send in what you want me and the referees to consider to be the final version. When you send in your revision, make sure to also include a reply to me as well as to the remaining referee, explaining what you did with the comments you received.} 
+\noindent \textbf{Editor, Comment 1. Please send in what you want me and the referees to consider to be the final version. When you send in your revision, make sure to also include a reply to me as well as to the remaining referee, explaining what you did with the comments you received.}
 
-\noindent \textit{Response.} We are submitting what we consider our final version. We have responded to your questions and those of the referees. 
+\noindent \textit{Response.} We are submitting what we consider our final version. We have responded to your questions and those of the referees.
 
 \noindent \textbf{Editor, Comment 2. Keep in mind that this is, ultimately, your paper. I very much hope that we can get by with one last round of revisions at this point. I believe this is in our mutual interest. This, obviously, depends much on you providing a dedicated revision. It should not exceed the current length by more than three pages, i.e. not exceed 42 pages, including the references.}
 
-\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have complied to the page limit that you indicated.
+\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have complied with the page limit that you indicated.
 
 \noindent \textbf{Editor, Comment 3. I assume that the material following the references is meant to be an online appendix: please clearly indicate (and confirm) that this is so.}
 
@@ -71,7 +71,7 @@ University of Southern California}
 
 \noindent \textbf{Editor, Comment 4. At this point, please provide the appropriate documentation along with your resubmission.}
 
-\noindent \textit{Response.} The front page of the paper has a link to the online repository containing the code for each and all of our computations, together with the corresponding replication instructions. We cannot post the data because it is not open access, but we can facilitate any person interested in replicating our computations the adequate contacts to request access to the data. Once access to the data is provided, we can provide help with replicating any of our computations.
+\noindent \textit{Response.} The front page of the paper has a link to the online repository containing the code for each and all of our computations, together with the corresponding replication instructions. We cannot post the data because it is not open access, but we can facilitate any person interested in replicating our computations with the adequate contacts to request access to the data. Once access to the data is provided, we can provide help with replicating any of our computations.
 
 \section*{Comments of Reviewer 1}
 
@@ -87,9 +87,9 @@ University of Southern California}
 
 \noindent \textit{Response.} We appreciate this comment and acknowledge that our focus on the first phase of the program lead us to a brief and imprecise description of the second phase of the program. We have modified the description of the second phase of the program in the third paragraph of Section~\ref{section:background}.
 
-\noindent \textbf{Referee 1, Comment 4. Authors state ``data were collected annually on cognitive and social-emotional skills…'' This simplifies incorrectly. The common data collection (there were minor variations not worthy of mention for this paper) were at 6 month intervals through age 5 (60 mos.), then at age 6 and next on to the ages 8, 12, 15, and 30 already mentioned in the next sentence. Since this is not ``annual" the sentence should be corrected - and there are not 7 year old data. This is minor, but an example for careless characterization of the study, given the tremendous emphasis on details about computing social efficiency overall. Another example of carelessness in description of methodology is the statement that additional information was collected ``from a physician-administered medical survey, when the subjects were in their mid-30s.'' In fact, there was an in-person set of assessments, included collection of bio specimens and measurements. This is not a survey. Statement should be corrected to correspond to what occurred, especially since health outcomes based on this one-time assessment are incorporated in the forecasting models.} 
+\noindent \textbf{Referee 1, Comment 4. Authors state ``data were collected annually on cognitive and social-emotional skills…'' This simplifies incorrectly. The common data collection (there were minor variations not worthy of mention for this paper) were at 6 month intervals through age 5 (60 mos.), then at age 6 and next on to the ages 8, 12, 15, and 30 already mentioned in the next sentence. Since this is not ``annual" the sentence should be corrected - and there are not 7 year old data. This is minor, but an example for careless characterization of the study, given the tremendous emphasis on details about computing social efficiency overall. Another example of carelessness in description of methodology is the statement that additional information was collected ``from a physician-administered medical survey, when the subjects were in their mid-30s.'' In fact, there was an in-person set of assessments, included collection of bio specimens and measurements. This is not a survey. Statement should be corrected to correspond to what occurred, especially since health outcomes based on this one-time assessment are incorporated in the forecasting models.}
 
-\noindent \textit{Response.} This comment is very useful because we were incorrectly simplifying the data collection. We have modified the last paragraph of Section~\ref{section:background} accordingly.
+\noindent \textit{Response.} This comment is very useful because we were incorrectly simplifying the data collection procedure. We have modified the last paragraph of Section~\ref{section:background} accordingly.
 
 \noindent \textbf{Referee 1, Comment 5. I strongly recommend that the authors modify their simplification of the ABC/CARE intervention as mostly just free high-quality childcare for more than 9 hrs/day, 50 wks/yr is seriously misleading. At the very least, the authors should add several words that capture that this was ``an enriched, educationally focused child care center program'' or ``an early educational intervention in a high-quality child care center'' (which had a curriculum and active supervision of care providers and licensed teachers - informed by scientific knowledge at that time about how infants, toddlers, and young children learn. Why this is important is that many policymakers and economists may naively think that this is equal to subsidized child care in our country. This would be a misleading interpretation for what this paper shows - beyond demonstrating how to compute models of lifelong benefits. That is, this article serves two purposes: one is the proposal of how to calculate benefits from interventions and the other is the particular benefits of these two combined programs. The article needs to be informative and scientifically accurate on both purposes.}
 
@@ -97,13 +97,13 @@ University of Southern California}
 
 \section*{Comments of Reviewer 2}
 
-\noindent \textbf{Referee 2, Comment 1. [\ldots] Assumption~\ref{ass:contain} does not seem exactly right. For the $n$ group, $d = 0$ always in your sample which means that $\bm{X}_{k,a}^1$ is never observed. Yet, since Assumption~\ref{ass:contain} holds for $d \in \{ 0,1 \}$ it holds for $d = 1$ which says:} 
+\noindent \textbf{Referee 2, Comment 1. [\ldots] Assumption~\ref{ass:contain} does not seem exactly right. For the $n$ group, $d = 0$ always in your sample which means that $\bm{X}_{k,a}^1$ is never observed. Yet, since Assumption~\ref{ass:contain} holds for $d \in \{ 0,1 \}$ it holds for $d = 1$ which says:}
 
 \begin{equation}
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ). \label{eq:ref1}
 \end{equation}
 
-\textbf{but since $\bm{X}_{k,a}^1$ is never observed, I don't think its support is relevant. It seems like it should be something like} 
+\textbf{but since $\bm{X}_{k,a}^1$ is never observed, I don't think its support is relevant. It seems like it should be something like}
 
 \begin{equation}
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^0, \bm{X}^0_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref2}
@@ -115,15 +115,15 @@ supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subset
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref3}
 \end{equation}
 
-\noindent \textit{Response.} It is correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$e$'' sample and require Assumption~\ref{ass:contain} to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. We need to guarantee that the non-experimental sample that we use to estimate the function covers the support of the arguments of these functions. Thus, the support of the inputs and the background variables in the productions functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the experimental data. We document that this holds in Appendix~\ref{app:containsupport}. 
+\noindent \textit{Response.} We thank the referee for a close reading and for detecting a truly unclear part of the paper. It is certainly correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$n$'' sample and Assumptions~\ref{ass:contain}-\ref{ass:exog} enable us to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. For nonparametric identification, we need to guarantee that the non-experimental sample used to estimate the deterministic part of the production function covers the support of the arguments of these functions in the population of interest---the target experimental population both within and out of sample. Thus, the support of the inputs and the background variables in the production functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the data characterizing the target population (i.e., the experimental samples). We document that this holds in Appendix~\ref{app:containsupport}. We also require that we can accurately forecast mean future outcomes beyond age $a\geq a^*$. We have rewritten \ref{ass:contain} and added Assumption~\ref{ass:more} to break the discussion into one about support conditions and one about forecastibility of inputs. This revised text should clarify matters. Recall that under \ref{ass:summary}, conditioning on $\bm{X}, \bm{B}$ makes $\bm{Y}^1_{e,a} = \bm{Y}^0_{e,a} = \bm{Y}_n$, i.e., the non-experimental samples can be used to construct counterfactuals. It is key to our procedure that we condition on the appropriate $\bm{X},\bm{B}$ values.
 
-There is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition of interest. We are not trying to use the control group in the experimental sample to forecast in the treatment group in the experimental sample, which the referee requests that we do (we do use it to test our assumptions, however). A similar remark applies regarding the comments of the referee in Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample and thus we require
+On a minor point, there is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition we invoke. We are not trying to use the control group in the experimental sample to forecast outcomes in the treatment group in the experimental sample, which the referee requests that we do. We do, however, test some of our assumptions doing so. A similar remark applies regarding the comments of the referee surrounding Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample. A sufficient condition is 
 
 \begin{equation}
-supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}^0, \bm{X}^0_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).  \label{eq:ref4},
+supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).  \label{eq:ref4},
 \end{equation}
 
-which holds as a direct consequence of Assumption~\ref{ass:contain}. 
+which holds as a direct consequence of Assumption~\ref{ass:contain} (assuming treatment invariance \ref{ass:summary}).
 
 \noindent \textbf{Referee 2, Comment 2. [\ldots] It feels that this is more complicated than it needs to be. For example, I don't understand why you need to distinguish between $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right) $ and $\bm{\varepsilon}_{k,a}^d$. You motivate this with the conditional mean $\Delta_a$ so if I focus on identifying that, one needs to identify}
 
@@ -139,21 +139,21 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
 
 \textbf{which seems to be implied by Assumptions~\ref{ass:summary} to \ref{ass:exog}. The second is the support condition Assumption~\ref{ass:contain}. Why not presenting it this way? Am I missing something?}
 
-\noindent \textit{Response.} Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4}. We present the assumption and derive the implications in Equations~\eqref{eq:suff1},~\eqref{eq:suff2}, and~\eqref{eq:nec},  which include Equations~\eqref{eq:ref4}. We find it clarifying to distinguish the components of the technology arising from observables from the components due to unobservables. Note also that including $\bm{\varepsilon}_{k,a}^d$ in the invariance assumption provides us with additional implications that we test. The analysis as presented generated testable implications which we test. We plead to keep this analysis as it provides additional tests of our model. 
+\noindent \textit{Response.} The referee is perfectly correct that all we need for mean forecasts is \eqref{eq:nec} along with support conditions. Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4} (our \eqref{eq:nec}). We present the assumption and derive~\eqref{eq:ref4} (our \eqref{eq:nec}) as an implication of Equations~\eqref{eq:suff1} and~\eqref{eq:nec}. We find it clarifying to distinguish the components of the technology arising from observables from the components arising from unobservables. This is especially helpful in forecasting future mean values. We test the properties of the $\bm{\phi}$ functions while we normalize the mean of the unobservables. We think the distinction we make between observables and unobservables is a useful one and allows us to make testable predictions.
 
-\noindent \textbf{Referee 2, Comment 3. It seems like we need some assumption about $\bm{X}_{e,a}^d$. In general, if Assumptions~\ref{ass:summary} to \ref{ass:exog} hold but I want to identify $\mathbb{E} \left[ \bm{Y}_{e,a} | \bm{B} \in \mathcal{B}_0 \right]$ for $a^* < a$, I typically won't observe $\bm{X}_{e,a}^d$ in the data but if I can't observe $\bm{X}_{e,a}^d$ why is exogeneity useful? Thus it seems that for identification we need an additional assumption about identification of $\bm{X}_{e,a}^d$. It seems like essentially just assuming $G_{e,a}^d \left( \bm{x} \right)$ is identified in my example above.} 
+\noindent \textbf{Referee 2, Comment 3. It seems like we need some assumption about $\bm{X}_{e,a}^d$. In general, if Assumptions~\ref{ass:summary} to \ref{ass:exog} hold but I want to identify $\mathbb{E} \left[ \bm{Y}_{e,a} | \bm{B} \in \mathcal{B}_0 \right]$ for $a^* < a$, I typically won't observe $\bm{X}_{e,a}^d$ in the data but if I can't observe $\bm{X}_{e,a}^d$ why is exogeneity useful? Thus it seems that for identification we need an additional assumption about identification of $\bm{X}_{e,a}^d$. It seems like essentially just assuming $G_{e,a}^d \left( \bm{x} \right)$ is identified in my example above.}
 
-\noindent \textit{Response.} We assume that the referee means ``observation of $\bm{X}_{e,a}^d$'' rather than ``identification.'' The referee is absolutely correct that we need a support condition. We address this point with our support assumption (Assumption~\ref{ass:contain}). \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and are used to generate outcomes through an invariant technology. 
+\noindent \textit{Response.} We assume that the referee means ``observing $\bm{X}_{e,a}^d$'' rather than ``identification.'' The referee is absolutely correct that we need a support condition. We address this point with support Assumption~\ref{ass:contain}. \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and are used to generate outcomes through an invariant technology.
 
 \section*{Comments of Reviewer 3}
 
 \noindent \textbf{Referee 3, Comment 1. A key assumption is that the mapping between predictors and outcomes to be constant across children, parents, and grand-children, once you control for background variables. Can't this assumption be relaxed to allow for interactions between cohort and predictors/outcomes in a parametric/restrictive way? For example, I suppose you could allow for say a (e.g. linear) trend between cohort of birth and these variables. Can data be informative about how one would specify such a trend?}
 
-\noindent \textit{Response.} We only make the assumption of invariance for one generation. Our model is not necessarily an OLG model. In addition, we can allow for general conditioning on covariates but we need to satisfy support conditions. For example, we can allow for polynomial age or work-experience trends. In our application, we test and do not reject invariance without doing so. Extrapolation is a serious issue and we now say so.
+\noindent \textit{Response.} We only make the assumption of invariance for one generation. Our model is not necessarily an OLG model. In addition, we can allow for general conditioning on covariates but we need to satisfy support conditions. For example, we can allow for polynomial age or work-experience (age - schooling - 6) trends. In our application, we test and do not reject invariance. Extrapolation is a serious issue and we now say so more clearly.
 
-\noindent \textbf{Referee 3, Comment 2. I didn't fully understand your response to my question of cross-equation restrictions. I understand you use multiple data sets, but it seems to be that there is more than one outcome per data set. Using such restrictions should not only improve efficiency but it would also be important in terms of interpreting the results.} 
+\noindent \textbf{Referee 3, Comment 2. I didn't fully understand your response to my question of cross-equation restrictions. I understand you use multiple data sets, but it seems to be that there is more than one outcome per data set. Using such restrictions should not only improve efficiency but it would also be important in terms of interpreting the results.}
 
-\noindent \textit{Response.} Your point is a good general point. Cross-equation restrictions improve efficiency. We are using them in extracting factors from multiple measurements. However, we forecast each of the many outcomes in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets used for each outcome. In terms of implementing our  strategy, the benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We now clarify that these restrictions can be imposed when stating Assumption~\ref{ass:summary}. As we state above, in our case it is not possible to impose these restrictions in most cases because different outcomes come from different datasets. 
+\noindent \textit{Response.} Your point is absolutely correct. Cross-equation restrictions improve efficiency. We are using them in extracting factors from multiple measurements. However, we forecast \textbf{each} of the many outcomes depicted in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets used for each outcome. In terms of implementing our  strategy, the benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We now clarify that these restrictions can be imposed when stating Assumption~\ref{ass:summary}. As we state above, in our case it is not possible to impose these restrictions in most cases because different outcomes come from different datasets.
 
 \noindent \textbf{Referee 3, Comment 3. Are the gains in labor income concentrated among those whose health improved? Presumably, the policymakers care about how the joint distributions change. If the paper is supposed to be a template, it would be useful to know how the authors would suggest other researchers could incorporate such restrictions in future work.}
 
@@ -161,25 +161,20 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
 
 \noindent \textbf{Referee 3, Comment 4. I am still confused why one needs a randomized experiment if one is willing to make the assumptions you invoke. Under your assumptions, what is so special about experimentally induced variation in inputs. Any variation would do, including observational variation, right? Put differently, suppose you want to use your framework in a setting with only observational variation in inputs. Would I need to change or modify any assumptions? If not, I don't see what role the experiment per se plays.}
 
-\noindent \textit{Response.} Your point is dead-on. But note that the experiment allows us to test exogeneity rather than impose it. We do that in the paper. Assumption~\ref{ass:exog} allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production-function mappings are identical across experimental and non-experimental samples (and provides testable implications derived from this). The experiment is also useful because it sets the treatment-control difference in the outcomes of interest through the experimentally-induced changes in the inputs that we use to forecast. This is what many policy changes would do. The experiment gives us a policy-relevant exogenous change in the inputs. It fixes the goal of the analysis in the non-experimental sample.
+\noindent \textit{Response.} The experiment is needed to determine what inputs are shifted by the program we study. It gives us policy-relevant exogenous changes in the inputs. It also sets the target for any forecasting analysis to attain. In addition, the experiment allows us to \textbf{test} exogeneity in the non-experimental sample rather than just assume it blindly. We conduct tests of exogeneity in our paper. Old Assumption A-3 (now \ref{ass:exog}) allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production-function mappings are identical across experimental and non-experimental samples (and provides testable implications derived from this).
 
 \noindent \textbf{Referee 3, Comment 5. The authors conclude with the cautionary note that the program they study was targeted to a disadvantaged. Related to this point, the authors may want to emphasize the homogeneity assumption underlying their forecast exercise. At least in other settings, one would expect there to be considerable heterogeneity in effects even among observationally equivalent children and parents.}
 
-\noindent \textit{Response.} This is a good point that we have added to the cautionary note of the conclusion.
+\noindent \textit{Response.} This is a good point that we have added to the cautionary note in the conclusion.
 
 \section*{Comments of Reviewer 4}
 
 \noindent \textbf{Referee 4, Comment 1. Table 4 contains estimates for an impressive array of variations on the authors' methodology, but (as I understand it) these estimates all use the authors' forecasting technology applied to their current data set to construct production functions, but vary the outcomes included in the cost/benefit calculation (e.g., ignoring gains for outcomes that occur past age 21 or age 30, or outcomes in a particular domain).}
 
 \noindent \textit{Response.} We agree that your understanding of this part is correct.
- 
+
 \noindent \textbf{Referee 4, Comment 2. An alternative form of robustness is to ask what would have happened if the authors had not had access to experimental data through age 30. Suppose they deleted all information in the Abecedarian data set observed after some earlier age, and conducted the projection exercise on the remaining data. What would the estimated rates of return look like? Another way of stating this question: what answers would the authors have reported if forced to write this paper 5, 10, 15, or 20 years ago, using the same projection methodology they developed for the current version? Robustness of the estimates to different possible followup windows would give readers a lot of confidence regarding the authors' results based on the data that happens to be available today. On the other hand, showing that the estimates would have been inaccurate before a particular date would be helpful for researchers interpreting results from more recent evaluations where less time has elapsed since treatment.}
 
-\noindent \textit{Response.} We agree. Your suggested exercise is interesting and we have implemented it and created Section~\ref{section:additionalsens} to describe it in the main text. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct your proposed exercise. That material assesses the general point that you make in your report.
-
-%References
-\singlespace
-\bibliographystyle{chicago}
-\bibliography{heckman}
+\noindent \textit{Response.} The fist row of Table~\ref{table:comparing} addresses this point. We consider how a widely used procedure works. The procedure takes an early test score and uses another data set to establish a relationship with earnings up to 27 to forecast the benefits of the program. We show that it is woefully inadequate. You suggest additional exercises which are interesting. We have implemented them at the end of Section~\ref{section:bcaestimates}. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct exercises. That material assesses the general point that you make in your report.
 
 \end{document}
