--- a/abc_comprehensivecba_answerstoreferees_secondround.tex
+++ b/abc_comprehensivecba_answerstoreferees_secondround.tex
@@ -63,7 +63,7 @@ University of Southern California}
 
 \noindent \textbf{Editor, Comment 2. Keep in mind that this is, ultimately, your paper. I very much hope that we can get by with one last round of revisions at this point. I believe this is in our mutual interest. This, obviously, depends much on you providing a dedicated revision. It should not exceed the current length by more than three pages, i.e. not exceed 42 pages, including the references.}
 
-\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have complied with the page limit that you indicated.
+\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have exceeded the page limit that you indicated only by $1/2$ page.
 
 \noindent \textbf{Editor, Comment 3. I assume that the material following the references is meant to be an online appendix: please clearly indicate (and confirm) that this is so.}
 
@@ -115,12 +115,12 @@ supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subset
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref3}
 \end{equation}
 
-\noindent \textit{Response.} We thank the referee for a close reading and for detecting a truly unclear part of the paper. It is certainly correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$n$'' sample and Assumptions~\ref{ass:contain}-\ref{ass:exog} enable us to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. For nonparametric identification, we need to guarantee that the non-experimental sample used to estimate the deterministic part of the production function covers the support of the arguments of these functions in the population of interest---the target experimental population both within and out of sample. Thus, the support of the inputs and the background variables in the production functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the data characterizing the target population (i.e., the experimental samples). We document that this holds in Appendix~\ref{app:containsupport}. We also require that we can accurately forecast mean future outcomes beyond age $a\geq a^*$. We have rewritten \ref{ass:contain} and added Assumption~\ref{ass:more} to break the discussion into one about support conditions and one about forecastibility of inputs. This revised text should clarify matters. Recall that under \ref{ass:summary}, conditioning on $\bm{X}, \bm{B}$ makes $\bm{Y}^1_{e,a} = \bm{Y}^0_{e,a} = \bm{Y}_n$, i.e., the non-experimental samples can be used to construct counterfactuals. It is key to our procedure that we condition on the appropriate $\bm{X},\bm{B}$ values.
+\noindent \textit{Response.} We thank the referee for a close reading and for noting an unclear part of the paper. It is certainly correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$n$'' sample and Assumptions~\ref{ass:summary}-\ref{ass:exog} enable us to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. For nonparametric identification, we need to guarantee that the non-experimental sample used to estimate the deterministic part of the production function covers the support of the arguments of these functions in the population of interest---the target experimental population both within and what it would be out of sample. Thus, the support of the inputs and the background variables in the production functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the data characterizing the target population (i.e., the experimental samples). We document that this holds for $a \leq a^*$ in Appendix~\ref{app:containsupport}. We also require that we can accurately forecast mean future outcomes beyond age $a > a^*$. We have rewritten \ref{ass:contain} and added Assumption~\ref{ass:more} to present a discussion of support conditions and about forecastibility of the distributions of the inputs. This revised text should clarify matters. Recall that under \ref{ass:summary}, conditioning on $\bm{X}, \bm{B}$ makes $\bm{Y}^1_{e,a} = \bm{Y}^0_{e,a} = \bm{Y}_n$, i.e., the non-experimental samples can be used to construct counterfactuals. It is key to our procedure that we condition on the appropriate $\bm{X},\bm{B}$ values.
 
-On a minor point, there is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition we invoke. We are not trying to use the control group in the experimental sample to forecast outcomes in the treatment group in the experimental sample, which the referee requests that we do. We do, however, test some of our assumptions doing so. A similar remark applies regarding the comments of the referee surrounding Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample. A sufficient condition is 
+On a minor point, there is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not a support condition that we invoke. We are not trying to use the control group in the experimental sample to forecast outcomes in the treatment group in the experimental sample, which the referee requests that we do. We do, however, test some of the assumptions of our procedure by doing so and this may have been confusing. A similar remark applies regarding the comments of the referee surrounding Equation~\eqref{eq:ref3}. A better way to understand our Assumptions~\ref{ass:contain} and~\ref{ass:more} is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast experimental outcomes. One sufficient condition is the support requirement for all $a$:
 
 \begin{equation}
-supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).  \label{eq:ref4},
+supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ),  \label{eq:ref4}
 \end{equation}
 
 which holds as a direct consequence of Assumption~\ref{ass:contain} (assuming treatment invariance \ref{ass:summary}).
@@ -139,7 +139,9 @@ which holds as a direct consequence of Assumption~\ref{ass:contain} (assuming tr
 
 \textbf{which seems to be implied by Assumptions~\ref{ass:summary} to \ref{ass:exog}. The second is the support condition Assumption~\ref{ass:contain}. Why not presenting it this way? Am I missing something?}
 
-\noindent \textit{Response.} The referee is perfectly correct that all we need for mean forecasts is \eqref{eq:nec} along with support conditions. Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4} (our \eqref{eq:nec}). We present the assumption and derive~\eqref{eq:ref4} (our \eqref{eq:nec}) as an implication of Equations~\eqref{eq:suff1} and~\eqref{eq:nec}. We find it clarifying to distinguish the components of the technology arising from observables from the components arising from unobservables. This is especially helpful in forecasting future mean values. We test the properties of the $\bm{\phi}$ functions while we normalize the mean of the unobservables. We think the distinction we make between observables and unobservables is a useful one and allows us to make testable predictions.
+\noindent \textit{Response.} The referee is perfectly correct that all we need for mean forecasts is Condition \eqref{eq:nec} along with support conditions. Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4} (our \eqref{eq:nec}). We present the assumption and derive~\eqref{eq:ref4} (our \eqref{eq:nec}) as an implication of Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}. 
+
+We find it clarifying to distinguish the components of the technology arising from observables from the components arising from unobservables. This is especially helpful in forecasting future values of inputs. We test properties of the $\bm{\phi}^d$ functions while normalizing the mean of the unobservables. We think the distinction we make between observables and unobservables is useful and facilitates making testable predictions.
 
 \noindent \textbf{Referee 2, Comment 3. It seems like we need some assumption about $\bm{X}_{e,a}^d$. In general, if Assumptions~\ref{ass:summary} to \ref{ass:exog} hold but I want to identify $\mathbb{E} \left[ \bm{Y}_{e,a} | \bm{B} \in \mathcal{B}_0 \right]$ for $a^* < a$, I typically won't observe $\bm{X}_{e,a}^d$ in the data but if I can't observe $\bm{X}_{e,a}^d$ why is exogeneity useful? Thus it seems that for identification we need an additional assumption about identification of $\bm{X}_{e,a}^d$. It seems like essentially just assuming $G_{e,a}^d \left( \bm{x} \right)$ is identified in my example above.}
 
@@ -175,6 +177,8 @@ which holds as a direct consequence of Assumption~\ref{ass:contain} (assuming tr
 
 \noindent \textbf{Referee 4, Comment 2. An alternative form of robustness is to ask what would have happened if the authors had not had access to experimental data through age 30. Suppose they deleted all information in the Abecedarian data set observed after some earlier age, and conducted the projection exercise on the remaining data. What would the estimated rates of return look like? Another way of stating this question: what answers would the authors have reported if forced to write this paper 5, 10, 15, or 20 years ago, using the same projection methodology they developed for the current version? Robustness of the estimates to different possible followup windows would give readers a lot of confidence regarding the authors' results based on the data that happens to be available today. On the other hand, showing that the estimates would have been inaccurate before a particular date would be helpful for researchers interpreting results from more recent evaluations where less time has elapsed since treatment.}
 
-\noindent \textit{Response.} The fist row of Table~\ref{table:comparing} addresses this point. We consider how a widely used procedure works. The procedure takes an early test score and uses another data set to establish a relationship with earnings up to 27 to forecast the benefits of the program. We show that it is woefully inadequate. You suggest additional exercises which are interesting. We have implemented them at the end of Section~\ref{section:bcaestimates}. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct exercises. That material assesses the general point that you make in your report.
+\noindent \textit{Response.} The first row of Table~\ref{table:comparing} addresses this point. We consider how a widely used forecast procedure works. The procedure takes an early test score and uses another data set to establish a relationship with earnings up to 27 to forecast the benefits of the program. We show that it is woefully inadequate. 
+
+You suggest valuable additional exercises which are interesting. We have implemented them in the final portion of Section~\ref{section:bcaestimates}. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct exercises. That material assesses the general point that you make in your report. It appears that applying our procedure using final education up to age 21 and test scores yields accurate forecasts. Applying it on early earnings does not.
 
 \end{document}
