ready to submit to the jpe

--- a/abc_comprehensivecba_answerstoreferees_secondround.tex
+++ b/abc_comprehensivecba_answerstoreferees_secondround.tex
@@ -63,7 +63,7 @@ University of Southern California}
 
 \noindent \textbf{Editor, Comment 2. Keep in mind that this is, ultimately, your paper. I very much hope that we can get by with one last round of revisions at this point. I believe this is in our mutual interest. This, obviously, depends much on you providing a dedicated revision. It should not exceed the current length by more than three pages, i.e. not exceed 42 pages, including the references.}
 
-\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have exceeded the page limit that you indicated only by $1/2$ page.
+\noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have exceeded the page limit that you indicated only by $1/3$ page.
 
 \noindent \textbf{Editor, Comment 3. I assume that the material following the references is meant to be an online appendix: please clearly indicate (and confirm) that this is so.}
 
@@ -115,9 +115,9 @@ supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subset
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref3}
 \end{equation}
 
-\noindent \textit{Response.} We thank the referee for a close reading and for noting an unclear part of the paper. It is certainly correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$n$'' sample and Assumptions~\ref{ass:summary}-\ref{ass:exog} enable us to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. For nonparametric identification, we need to guarantee that the non-experimental sample used to estimate the deterministic part of the production function covers the support of the arguments of these functions in the population of interest---the target experimental population both within and what it would be out of sample. Thus, the support of the inputs and the background variables in the production functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the data characterizing the target population (i.e., the experimental samples). We document that this holds for $a \leq a^*$ in Appendix~\ref{app:containsupport}. We also require that we can accurately forecast mean future outcomes beyond age $a > a^*$. We have rewritten \ref{ass:contain} and added Assumption~\ref{ass:more} to present a discussion of support conditions and about forecastibility of the distributions of the inputs. This revised text should clarify matters. Recall that under \ref{ass:summary}, conditioning on $\bm{X}, \bm{B}$ makes $\bm{Y}^1_{e,a} = \bm{Y}^0_{e,a} = \bm{Y}_n$, i.e., the non-experimental samples can be used to construct counterfactuals. It is key to our procedure that we condition on the appropriate $\bm{X},\bm{B}$ values.
+\noindent \textit{Response.} We thank the referee for a close reading and for noting an unclear part of the paper. It is certainly correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$n$'' sample and Assumptions~\ref{ass:summary}-\ref{ass:exog} enable us to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. For nonparametric identification, we need to guarantee that the non-experimental sample used to estimate the deterministic part of the production function covers the support of the arguments of these functions in the population of interest---the target experimental population both within sample and what it would be out of sample. Thus, the support of the inputs and the background variables in the production functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the data characterizing the target population (i.e., the experimental samples). We document that this holds for $a \leq a^*$ in Appendix~\ref{app:containsupport}. We also require that we can accurately forecast mean future outcomes beyond age $a > a^*$. We have rewritten \ref{ass:contain} and added Assumption~\ref{ass:more} to present a discussion of support conditions and about forecastibility of the distributions of the inputs. This revised text should clarify matters. Recall that under \ref{ass:summary}, conditioning on $\bm{X}, \bm{B}$ makes $\bm{Y}^1_{e,a} = \bm{Y}^0_{e,a} = \bm{Y}_n$, i.e., the non-experimental samples can be used to construct counterfactuals. It is key to our procedure that we condition on the appropriate $\bm{X},\bm{B}$ values.
 
-On a minor point, there is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not a support condition that we invoke. We are not trying to use the control group in the experimental sample to forecast outcomes in the treatment group in the experimental sample, which the referee requests that we do. We do, however, test some of the assumptions of our procedure by doing so and this may have been confusing. A similar remark applies regarding the comments of the referee surrounding Equation~\eqref{eq:ref3}. A better way to understand our Assumptions~\ref{ass:contain} and~\ref{ass:more} is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast experimental outcomes. One sufficient condition is the support requirement for all $a$:
+On a minor point, there is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not a support condition that we invoke. We are not trying to use the control group in the experimental sample to forecast outcomes in the treatment group in the experimental sample, which the referee requests that we do. We do, however, \textbf{test} some of the assumptions of our procedure by doing so and this may have been a source of confusion. A similar remark applies regarding the comments of the referee surrounding Equation~\eqref{eq:ref3}. A better way to understand our Assumptions~\ref{ass:contain} and~\ref{ass:more} is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast experimental outcomes. One sufficient condition is the support requirement for all $a$:
 
 \begin{equation}
 supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ),  \label{eq:ref4}
@@ -177,8 +177,8 @@ We find it clarifying to distinguish the components of the technology arising fr
 
 \noindent \textbf{Referee 4, Comment 2. An alternative form of robustness is to ask what would have happened if the authors had not had access to experimental data through age 30. Suppose they deleted all information in the Abecedarian data set observed after some earlier age, and conducted the projection exercise on the remaining data. What would the estimated rates of return look like? Another way of stating this question: what answers would the authors have reported if forced to write this paper 5, 10, 15, or 20 years ago, using the same projection methodology they developed for the current version? Robustness of the estimates to different possible followup windows would give readers a lot of confidence regarding the authors' results based on the data that happens to be available today. On the other hand, showing that the estimates would have been inaccurate before a particular date would be helpful for researchers interpreting results from more recent evaluations where less time has elapsed since treatment.}
 
-\noindent \textit{Response.} The first row of Table~\ref{table:comparing} addresses this point. We consider how a widely used forecast procedure works. The procedure takes an early test score and uses another data set to establish a relationship with earnings up to 27 to forecast the benefits of the program. We show that it is woefully inadequate. 
+\noindent \textit{Response.} The first row of Table~\ref{table:comparing} addresses this point. We consider how a widely used forecast procedure works. The procedure takes an early test score and uses another data set to establish a relationship between test scores and earnings up to 27 to forecast the benefits of the program. We show that it is woefully inadequate. 
 
-You suggest valuable additional exercises which are interesting. We have implemented them in the final portion of Section~\ref{section:bcaestimates}. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct exercises. That material assesses the general point that you make in your report. It appears that applying our procedure using final education up to age 21 and test scores yields accurate forecasts. Applying it on early earnings does not.
+You suggest valuable additional exercises which are interesting. We have implemented them in the final portion of Section~\ref{section:bcaestimates}. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct two exercises. We assess the general point that you make in your report. It appears that applying our procedure using test scores and final education up to age 21 yields accurate forecasts. Applying it only to  early earnings does not.
 
 \end{document}
