--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -30,7 +30,7 @@
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
 
-\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff contributed to the analysis in this paper. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. For very helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, and four anonymous referees, St\'{e}phane Bonhomme, Neal Cholli, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Evan Taylor, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}\thanks{This research was supported in part by grants from the Robert Wood Johnson Foundation's Policies for Action program, NICHD R37HD065072, the American Bar Foundation, the Buffett Early Childhood Fund, the Pritzker Children's Initiative, NICHD R01HD054702, NIA R01AG042390, and by the National Institute On Aging of the National Institutes of Health under Award Number P30AG024968. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff contributed to analysis related to this paper. We thank Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California for help adapting the Future Adult Model to make the health projections used in this paper. For very helpful comments on various versions of the paper, we thank the editor, Harald Uhlig, and four anonymous referees, St\'{e}phane Bonhomme, Neal Cholli, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Evan Taylor, Ed Vytlacil, Jim Walker, Chris Walters, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. We thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn for information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact the first author, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -109,7 +109,7 @@ This paper addresses a fundamental problem that arises in evaluating social prog
 
 As a byproduct, we also address the problem of aggregating evidence from the multiplicity of treatment effects found in ABC/CARE. We estimate economically interpretable aggregates: internal rates of return and benefit/cost ratios that monetize the large array of benefits and costs generated. In constructing these aggregates, we account for model estimation and forecasting error and the welfare cost of taxation to fund programs. Our estimates survive extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. To make these approximations, we formulate and estimate production functions on non-experimental samples that predict program treatment effects and assess their within-sample forecast accuracy in experimental samples. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance comparing outcomes in experimental samples with those forecasted in non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition treatment (policy) invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out-of-sample forecasts as we do in this paper.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs. We conduct an extensive sensitivity analyses for our baseline forecasting models including examining, for example, alternative assumptions about cohort effects that might characterize non-experimental samples. We compare the outcomes of our approach with a cruder matching procedure. Estimates from it replicate our more sophisticated procedure.
+We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. To make these approximations, we formulate and estimate production functions on non-experimental samples that predict program treatment effects and assess their within-sample forecast accuracy in experimental samples. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance comparing outcomes in experimental samples with those forecasted in non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition treatment (policy) invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out-of-sample forecasts as we do in this paper.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs. We conduct an extensive sensitivity analyses for our baseline forecasting models including examining, for example, alternative assumptions about cohort effects that might characterize non-experimental samples. We compare the outcomes of our approach with a cruder matching procedure. Estimates from it replicate those from our more sophisticated procedure.
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of the procedure.
 
@@ -189,7 +189,7 @@ A second aspect of Assumption~\ref{ass:summary}, that the structural relationshi
 \end{remark}
 
 \doublespacing
-Testing Assumption~\ref{ass:summary} using the experimental and non-experimental samples without imposing parametric assumptions requires common support conditions over the age range $a \leq a^*$. This requirement is captured by Assumption~\ref{ass:contain}.
+Testing Assumption~\ref{ass:summary} using the experimental and non-experimental samples without imposing parametric assumptions requires common support conditions over the age range $a \leq a^*$. This requirement is captured by Assumption~\ref{ass:contain}: 
 
 \onehalfspacing
 \begin{assumption} \textbf{In-Sample Support Conditions} \label{ass:contain}
@@ -198,7 +198,7 @@ For $a \leq a^*$ and $d \in \{ 0 , 1 \}$:
 supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}_{n,a}, \bm{B}_n. \bm{\varepsilon}_{n,a} ). \label{eq:what}
 \end{equation}
 \end{assumption}
-To forecast out of sample input paths in order to forecast out of sample treatment effects we require Assumption~\ref{ass:more}.
+To forecast out of sample input paths in order to forecast out of sample treatment effects we require Assumption~\ref{ass:more}:
 
 \onehalfspacing
 \begin{assumption} \textbf{Out-of-Sample Forecast Support} \label{ass:more}\\
@@ -207,8 +207,8 @@ To forecast out of sample input paths in order to forecast out of sample treatme
 \noindent Condition (i) is a version of Assumption~\ref{ass:contain} for $a>a^*$.
 \end{assumption}
 
-\begin{remark}
-This assumption includes accurate adjustments for cohort effects. We only require distributions of forecast variables to make accurate forecasts not knowledge of individual values.
+\begin{remark} \textbf{Requirements for Accurate Forecasts}
+This assumes that the analyst can make accurate adjustments for cohort effects. We only require distributions of forecast variables to make accurate forecasts.
 \end{remark}
 \doublespacing
 
@@ -585,7 +585,7 @@ The remaining exercises in Table~\ref{table:comparing} increase the age range ov
 
 Our methodology provides a more accurate estimate of the benefits and costs of the ABC/CARE program. We better quantify the effects of the experiment by considering the full array of benefits over the whole life cycle. We also better approximate the uncertainty of our estimates by considering both the sampling error in the experimental and auxiliary samples, the forecast error due to the interpolation and extrapolation, and the sensitivity of the estimates to externally specified parameters.
 
-In the concluding portion of this section we consider how well researchers would do if they aim to forecast life-cycle benefits applying our methodology but lack access to data through the mid-30s. For example, suppose that a researcher had access to inputs of the production function that are experimentally shifted by the treatment but only up to age 21. Studying the performance of our forecasting procedure in this case is an additional examination of robustness. 
+In the concluding portion of this section we consider how well researchers would do if they aim to forecast life-cycle benefits applying our methodology but lacking access to data through the mid-30s. For example, suppose that a researcher had access to inputs of the production function that are experimentally shifted by the treatment but only up to age 21. Studying the performance of our forecasting procedure in this case is an additional examination of robustness. 
 
 Researchers seeking to implement a formal forecasting methodology may face severe data limitations. Often, data are lacking beyond early ages (like age 5). Our analysis can inform researchers on how precise such forecasts might be if they are based only on data from earlier segments of the life cycle. The first row of Table~\ref{table:comparing} gives information on how well test scores at ages 5-7 predict the benefit-cost ratio of the program based only on labor income through age 27. For reasons previously discussed, this produces a poor approximation.
 
